Fix: Externalized CORS configuration and updated SecurityConfig to use dynamic origins.